tests/errors/runtime.CannotConvertDifferentDimensions.res
══╡ Conversion Error ╞════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Problem when converting value to given type

  Trying to convert quantity with property:
      length
  
  To:
      speed

  ┃ File: tests/errors/runtime.CannotConvertDifferentDimensions.art
  ┃ Line: 0
  ┃ 
  ┃    1 ║  1`m --> `km/h
  ┃    2 ║
